[package]
name = "astrum-deus-package-sdk"
description = "AstrumDeus Package SDK. Used for write AstrumDeus packages."
authors = ["lightless <lightless@foxmail.com>"]
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/lightless233/astrum-deus-commons"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"